--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <script>
 document.addEventListener("DOMContentLoaded", () => {
 
-  const basePath = "/pdf/"; // ✅ Ruta correcta para Vercel
+  const basePath = "/public/pdf/"; // ✅ Ruta corregida para Vercel
   const marcoFile = "MARCO_ACTA.pdf";
 
   const estadosValidos = [
@@ -186,4 +186,5 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
