--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 // -------- LOGIN SEGURO CON HASH SHA-256 --------
 const usuariosAutorizados = [
   // Ejemplo: usuario y hash SHA-256 de la contraseña
-  { user: "ADMIN", passHash: "9c56cc51..." }, // reemplaza con hash real
+  { user: "ADMIN", passHash: "835d6dc88b708bc646d6db82c853ef4182fabbd4a8de59c213f2b5ab3ae7d9be
+" }, // reemplaza con hash real
   { user: "cliente2", passHash: "f2d3a1b2..." },
   { user: "cliente3", passHash: "a1b2c3d4..." }
 ];
@@ -217,6 +218,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
 
 
