--- a/index.html
+++ b/index.html
@@ -5,187 +5,132 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>GESTORÍA GONZÁLEZ - ENMARCADO MÚLTIPLE</title>
 
-<!-- PDF-Lib -->
-<script src="https://unpkg.com/pdf-lib/dist/pdf-lib.min.js"></script>
-
-<!-- PDF.js -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
-<script>
-  pdfjsLib.GlobalWorkerOptions.workerSrc =
-    'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.worker.min.js';
-</script>
-
+<!-- Estilos para el modal de login elegante -->
 <style>
-  body { font-family: Arial, sans-serif; background:#f6f8fa; padding:24px; }
-  .card { background:#fff; border-radius:12px; padding:32px; max-width:800px; margin:auto; box-shadow:0 8px 25px rgba(0,0,0,0.12); text-align:center; }
-  h2 { color:#1a237e; margin-bottom:20px; }
-  h3 { margin-bottom:20px; color:#333; }
-  p { line-height:1.6; color:#333; }
-  label { display:block; margin:24px 0 8px; font-weight:bold; font-size:17px; color:#222; }
-  input { padding:14px; font-size:16px; border-radius:8px; border:1px solid #ccc; width:100%; box-sizing:border-box; }
-  button { background:#007bff; color:white; border:none; padding:16px 32px; font-size:18px; font-weight:bold; border-radius:10px; cursor:pointer; margin-top:30px; }
-  button:hover:not(:disabled) { background:#0056b3; }
-  button:disabled { background:#999; cursor:not-allowed; }
-  #status { margin-top:25px; font-weight:bold; font-size:19px; min-height:30px; }
-  #progress { margin-top:10px; color:#555; font-size:15px; }
-  hr { margin:30px 0; }
+  /* Modal de login */
+  #loginModal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.75);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    font-family: Arial, sans-serif;
+  }
+
+  #loginBox {
+    background: #ffffff;
+    padding: 40px 30px;
+    border-radius: 12px;
+    width: 350px;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+    text-align: center;
+    animation: fadeIn 0.5s ease;
+  }
+
+  #loginBox h2 {
+    margin-bottom: 25px;
+    color: #333;
+  }
+
+  #loginBox input {
+    width: 90%;
+    padding: 12px;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    font-size: 14px;
+  }
+
+  #loginBox button {
+    width: 95%;
+    padding: 12px;
+    background-color: #007BFF;
+    border: none;
+    color: white;
+    font-size: 16px;
+    border-radius: 8px;
+    cursor: pointer;
+    margin-top: 10px;
+  }
+
+  #loginBox button:hover {
+    background-color: #0056b3;
+  }
+
+  #errorMsg {
+    margin-top: 12px;
+    color: red;
+    font-size: 14px;
+  }
+
+  @keyframes fadeIn {
+    from {opacity: 0; transform: translateY(-20px);}
+    to {opacity: 1; transform: translateY(0);}
+  }
 </style>
 </head>
 <body>
 
-<div class="card">
-  <h2>GESTORÍA GONZÁLEZ</h2>
-  <h3>Sistema de Enmarcado Automático Múltiple</h3>
-  <p>Selecciona <strong>todas las actas que quieras enmarcar</strong> (puedes seleccionar 1, 10 o 100 de golpe).</p>
-  <p>El marco y el reverso se aplican automáticamente según el estado detectado.</p>
+<!-- Contenido de tu página original -->
+<div id="mainContent">
+  <!-- Aquí va TODO tu código original de la página, sin cambios -->
+  <h1>Bienvenido a Gestoría González</h1>
+  <p>Contenido protegido...</p>
+  
+  <!-- Ejemplo de contenido adicional de tu página -->
+  <p>Sección de enmarcado múltiple...</p>
+</div>
 
-  <label>Actas a enmarcar (múltiples archivos, sin reverso):</label>
-  <input id="baseFiles" type="file" accept="application/pdf" multiple>
-  <button id="mergeBtn">GENERAR TODOS LOS PDFs ENMARCADOS</button>
-
-  <hr>
-
-  <label>Actas a enmarcar y agregar reverso automáticamente:</label>
-  <input id="baseFilesWithReverso" type="file" accept="application/pdf" multiple>
-  <button id="mergeWithReversoBtn">GENERAR PDF CON REVERSO AUTOMÁTICO</button>
-
-  <div id="status">Listo para procesar</div>
-  <div id="progress"></div>
+<!-- Modal de login -->
+<div id="loginModal">
+  <div id="loginBox">
+    <h2>Iniciar Sesión</h2>
+    <input type="text" id="username" placeholder="Usuario">
+    <input type="password" id="password" placeholder="Contraseña">
+    <button onclick="checkLogin()">Entrar</button>
+    <p id="errorMsg"></p>
+  </div>
 </div>
 
 <script>
-document.addEventListener("DOMContentLoaded", () => {
+  // Usuarios y contraseñas gestionados desde aquí
+  const users = {
+    "admin": "1234",
+    "usuario1": "pass1",
+    "usuario2": "pass2"
+  };
 
-  const basePath = "/public/pdf/"; // ✅ Ruta corregida para Vercel
-  const marcoFile = "MARCO_ACTA.pdf";
+  const modal = document.getElementById('loginModal');
+  const mainContent = document.getElementById('mainContent');
+  mainContent.style.display = 'none'; // Oculta el contenido hasta login
 
-  const estadosValidos = [
-    "AGUASCALIENTES", "BAJA CALIFORNIA", "BAJA CALIFORNIA SUR",
-    "CAMPECHE", "CHIAPAS", "CHIHUAHUA", "CIUDAD DE MEXICO",
-    "COAHUILA", "COLIMA", "DURANGO", "GUANAJUATO", "GUERRERO",
-    "HIDALGO", "JALISCO", "MEXICO", "MICHOACAN", "MORELOS",
-    "NAYARIT", "NUEVO LEON", "OAXACA", "PUEBLA", "QUERETARO",
-    "QUINTANA ROO", "SAN LUIS POTOSI", "SINALOA", "SONORA",
-    "TABASCO", "TAMAULIPAS", "TLAXCALA", "VERACRUZ",
-    "YUCATAN", "ZACATECAS"
-  ];
+  function checkLogin() {
+    const username = document.getElementById('username').value.trim();
+    const password = document.getElementById('password').value;
 
-  function cleanText(str) {
-    return str.replace(/\s+/g,' ').trim();
-  }
-
-  function detectEstado(text) {
-    text = cleanText(text.toUpperCase());
-    for (const est of estadosValidos) {
-      if (text.includes(est)) return est;
+    if(users[username] && users[username] === password) {
+      modal.style.display = 'none';
+      mainContent.style.display = 'block';
+    } else {
+      document.getElementById('errorMsg').innerText = "Usuario o contraseña incorrectos";
     }
-    return null;
   }
 
-  async function extractTextFirstPage(file) {
-    const buffer = await file.arrayBuffer();
-    const pdf = await pdfjsLib.getDocument({ data: buffer }).promise;
-    const page = await pdf.getPage(1);
-    const textContent = await page.getTextContent();
-    return textContent.items.map(t => t.str).join(" ");
-  }
-
-  async function mergePDF(baseBytes) {
-    const { PDFDocument } = PDFLib;
-    const marcoBytes = await fetch(basePath + marcoFile).then(r => r.arrayBuffer());
-    const basePdf = await PDFDocument.load(baseBytes);
-    const marcoPdf = await PDFDocument.load(marcoBytes);
-    const result = await PDFDocument.create();
-
-    const [basePage] = await result.copyPages(basePdf, [0]);
-    const [marcoPage] = await result.copyPages(marcoPdf, [0]);
-    const { width, height } = basePage.getSize();
-    const page = result.addPage([width, height]);
-    page.drawPage(await page.doc.embedPage(marcoPage), { x:0, y:0, width, height });
-    page.drawPage(await page.doc.embedPage(basePage), { x:0, y:0, width, height });
-
-    return result;
-  }
-
-  async function mergePDFWithReverso(baseBytes, estado) {
-    const result = await mergePDF(baseBytes);
-    const revBytes = await fetch(basePath + estado + ".pdf").then(r => r.arrayBuffer());
-    const revPdf = await PDFLib.PDFDocument.load(revBytes);
-    const [revPage] = await result.copyPages(revPdf, [0]);
-    result.addPage(revPage);
-    return result;
-  }
-
-  async function download(pdf, name) {
-    const bytes = await pdf.save();
-    const url = URL.createObjectURL(new Blob([bytes], { type:"application/pdf" }));
-    const a = document.createElement("a");
-    a.href = url;
-    a.download = name;
-    a.click();
-    URL.revokeObjectURL(url);
-  }
-
-  // ---------- BOTONES ----------
-
-  document.getElementById("mergeBtn").addEventListener("click", async () => {
-    const input = document.getElementById("baseFiles");
-    const status = document.getElementById("status");
-    if (!input.files.length) return alert("Selecciona al menos un PDF.");
-
-    status.textContent = "Procesando documentos...";
-    let count = 0;
-
-    for (const file of input.files) {
-      try {
-        const bytes = await file.arrayBuffer();
-        const pdf = await mergePDF(bytes);
-        await download(pdf, file.name.replace(/\.pdf$/i, "") + " - ENMARCADO.pdf");
-        count++;
-      } catch(err) {
-        console.error(err);
-        alert("Error al procesar " + file.name + ": " + err.message);
-      }
-    }
-
-    status.textContent = `✔ ${count} PDF(s) procesados correctamente.`;
+  // Permite presionar Enter en el campo de contraseña para entrar
+  document.getElementById('password').addEventListener('keyup', function(e) {
+    if(e.key === 'Enter') checkLogin();
   });
-
-  document.getElementById("mergeWithReversoBtn").addEventListener("click", async () => {
-    const input = document.getElementById("baseFilesWithReverso");
-    const status = document.getElementById("status");
-    if (!input.files.length) return alert("Selecciona al menos un PDF.");
-
-    status.textContent = "Leyendo información del acta...";
-    let count = 0;
-
-    for (const file of input.files) {
-      try {
-        const text = await extractTextFirstPage(file);
-        const estado = detectEstado(text);
-        if (!estado) {
-          alert(`❌ Estado no detectado en: ${file.name}`);
-          continue;
-        }
-
-        const bytes = await file.arrayBuffer();
-        const pdf = await mergePDFWithReverso(bytes, estado);
-        await download(pdf, file.name.replace(/\.pdf$/i, "") + " - CON REVERSO.pdf");
-        count++;
-      } catch(err) {
-        console.error(err);
-        alert("Error en " + file.name + ": " + err.message);
-      }
-    }
-
-    status.textContent = `✔ ${count} PDF(s) con reverso procesados.`;
-  });
-
-});
 </script>
 
 </body>
 </html>
+
+
 
 
 
