--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
     background: #ffffff;
     padding: 40px 30px;
     border-radius: 12px;
-    width: 350px;
+    width: 380px;
     box-shadow: 0 8px 20px rgba(0,0,0,0.3);
     text-align: center;
     animation: fadeIn 0.5s ease;
   }
 
   #loginBox h2 {
-    margin-bottom: 25px;
+    margin-bottom: 20px;
     color: #333;
   }
 
   #loginBox input {
     width: 90%;
     padding: 12px;
-    margin: 10px 0;
+    margin: 8px 0;
     border: 1px solid #ccc;
     border-radius: 8px;
     font-size: 14px;
@@ -68,6 +68,22 @@
     font-size: 14px;
   }
 
+  #addUserSection {
+    margin-top: 20px;
+    border-top: 1px solid #ccc;
+    padding-top: 15px;
+  }
+
+  #addUserSection input {
+    margin-bottom: 5px;
+  }
+
+  #successMsg {
+    color: green;
+    font-size: 14px;
+    margin-top: 8px;
+  }
+
   @keyframes fadeIn {
     from {opacity: 0; transform: translateY(-20px);}
     to {opacity: 1; transform: translateY(0);}
@@ -79,196 +95,110 @@
 <!-- Contenedor que ocultará todo el contenido hasta login -->
 <div id="mainContent">
   <!-- PEGAR AQUÍ TODO TU HTML ORIGINAL DE LA PÁGINA -->
-  <!DOCTYPE html>
-<html lang="es">
-<head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>GESTORÍA GONZÁLEZ - ENMARCADO MÚLTIPLE</title>
+  <h1>Bienvenido a Gestoría González</h1>
+  <p>Contenido protegido...</p>
+  <p>Sección de enmarcado múltiple...</p>
 
-<!-- PDF-Lib -->
-<script src="https://unpkg.com/pdf-lib/dist/pdf-lib.min.js"></script>
+  <!-- Ejemplo de tu contenido original -->
+  <!-- 
+  <header>...</header>
+  <nav>...</nav>
+  <section>...</section>
+  <footer>...</footer>
+  -->
+</div>
 
-<!-- PDF.js -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
-<script>
-  pdfjsLib.GlobalWorkerOptions.workerSrc =
-    'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.worker.min.js';
-</script>
+<!-- Modal de login -->
+<div id="loginModal">
+  <div id="loginBox">
+    <h2>Iniciar Sesión</h2>
+    <input type="text" id="username" placeholder="Usuario">
+    <input type="password" id="password" placeholder="Contraseña">
+    <button onclick="checkLogin()">Entrar</button>
+    <p id="errorMsg"></p>
 
-<style>
-  body { font-family: Arial, sans-serif; background:#f6f8fa; padding:24px; }
-  .card { background:#fff; border-radius:12px; padding:32px; max-width:800px; margin:auto; box-shadow:0 8px 25px rgba(0,0,0,0.12); text-align:center; }
-  h2 { color:#1a237e; margin-bottom:20px; }
-  h3 { margin-bottom:20px; color:#333; }
-  p { line-height:1.6; color:#333; }
-  label { display:block; margin:24px 0 8px; font-weight:bold; font-size:17px; color:#222; }
-  input { padding:14px; font-size:16px; border-radius:8px; border:1px solid #ccc; width:100%; box-sizing:border-box; }
-  button { background:#007bff; color:white; border:none; padding:16px 32px; font-size:18px; font-weight:bold; border-radius:10px; cursor:pointer; margin-top:30px; }
-  button:hover:not(:disabled) { background:#0056b3; }
-  button:disabled { background:#999; cursor:not-allowed; }
-  #status { margin-top:25px; font-weight:bold; font-size:19px; min-height:30px; }
-  #progress { margin-top:10px; color:#555; font-size:15px; }
-  hr { margin:30px 0; }
-</style>
-</head>
-<body>
-
-<div class="card">
-  <h2>GESTORÍA GONZÁLEZ</h2>
-  <h3>Sistema de Enmarcado Automático Múltiple</h3>
-  <p>Selecciona <strong>todas las actas que quieras enmarcar</strong> (puedes seleccionar 1, 10 o 100 de golpe).</p>
-  <p>El marco y el reverso se aplican automáticamente según el estado detectado.</p>
-
-  <label>Actas a enmarcar (múltiples archivos, sin reverso):</label>
-  <input id="baseFiles" type="file" accept="application/pdf" multiple>
-  <button id="mergeBtn">GENERAR TODOS LOS PDFs ENMARCADOS</button>
-
-  <hr>
-
-  <label>Actas a enmarcar y agregar reverso automáticamente:</label>
-  <input id="baseFilesWithReverso" type="file" accept="application/pdf" multiple>
-  <button id="mergeWithReversoBtn">GENERAR PDF CON REVERSO AUTOMÁTICO</button>
-
-  <div id="status">Listo para procesar</div>
-  <div id="progress"></div>
+    <!-- Sección para agregar usuarios (solo visible tras login) -->
+    <div id="addUserSection">
+      <h3>Agregar Usuario</h3>
+      <input type="text" id="newUser" placeholder="Nuevo usuario">
+      <input type="password" id="newPass" placeholder="Contraseña">
+      <button onclick="addUser()">Agregar</button>
+      <p id="successMsg"></p>
+    </div>
+  </div>
 </div>
 
 <script>
-document.addEventListener("DOMContentLoaded", () => {
+  // Usuarios y contraseñas gestionados desde aquí
+  let users = {
+    "admin": "1234",
+    "usuario1": "pass1",
+    "usuario2": "pass2"
+  };
 
-  const basePath = "/public/pdf/"; // ✅ Ruta corregida para Vercel
-  const marcoFile = "MARCO_ACTA.pdf";
+  const modal = document.getElementById('loginModal');
+  const mainContent = document.getElementById('mainContent');
+  const addUserSection = document.getElementById('addUserSection');
+  const errorMsg = document.getElementById('errorMsg');
+  const successMsg = document.getElementById('successMsg');
 
-  const estadosValidos = [
-    "AGUASCALIENTES", "BAJA CALIFORNIA", "BAJA CALIFORNIA SUR",
-    "CAMPECHE", "CHIAPAS", "CHIHUAHUA", "CIUDAD DE MEXICO",
-    "COAHUILA", "COLIMA", "DURANGO", "GUANAJUATO", "GUERRERO",
-    "HIDALGO", "JALISCO", "MEXICO", "MICHOACAN", "MORELOS",
-    "NAYARIT", "NUEVO LEON", "OAXACA", "PUEBLA", "QUERETARO",
-    "QUINTANA ROO", "SAN LUIS POTOSI", "SINALOA", "SONORA",
-    "TABASCO", "TAMAULIPAS", "TLAXCALA", "VERACRUZ",
-    "YUCATAN", "ZACATECAS"
-  ];
+  mainContent.style.display = 'none'; // Oculta contenido hasta login
+  addUserSection.style.display = 'none'; // Oculta sección de agregar usuario
 
-  function cleanText(str) {
-    return str.replace(/\s+/g,' ').trim();
-  }
+  function checkLogin() {
+    const username = document.getElementById('username').value.trim();
+    const password = document.getElementById('password').value;
 
-  function detectEstado(text) {
-    text = cleanText(text.toUpperCase());
-    for (const est of estadosValidos) {
-      if (text.includes(est)) return est;
-    }
-    return null;
-  }
-
-  async function extractTextFirstPage(file) {
-    const buffer = await file.arrayBuffer();
-    const pdf = await pdfjsLib.getDocument({ data: buffer }).promise;
-    const page = await pdf.getPage(1);
-    const textContent = await page.getTextContent();
-    return textContent.items.map(t => t.str).join(" ");
-  }
-
-  async function mergePDF(baseBytes) {
-    const { PDFDocument } = PDFLib;
-    const marcoBytes = await fetch(basePath + marcoFile).then(r => r.arrayBuffer());
-    const basePdf = await PDFDocument.load(baseBytes);
-    const marcoPdf = await PDFDocument.load(marcoBytes);
-    const result = await PDFDocument.create();
-
-    const [basePage] = await result.copyPages(basePdf, [0]);
-    const [marcoPage] = await result.copyPages(marcoPdf, [0]);
-    const { width, height } = basePage.getSize();
-    const page = result.addPage([width, height]);
-    page.drawPage(await page.doc.embedPage(marcoPage), { x:0, y:0, width, height });
-    page.drawPage(await page.doc.embedPage(basePage), { x:0, y:0, width, height });
-
-    return result;
-  }
-
-  async function mergePDFWithReverso(baseBytes, estado) {
-    const result = await mergePDF(baseBytes);
-    const revBytes = await fetch(basePath + estado + ".pdf").then(r => r.arrayBuffer());
-    const revPdf = await PDFLib.PDFDocument.load(revBytes);
-    const [revPage] = await result.copyPages(revPdf, [0]);
-    result.addPage(revPage);
-    return result;
-  }
-
-  async function download(pdf, name) {
-    const bytes = await pdf.save();
-    const url = URL.createObjectURL(new Blob([bytes], { type:"application/pdf" }));
-    const a = document.createElement("a");
-    a.href = url;
-    a.download = name;
-    a.click();
-    URL.revokeObjectURL(url);
-  }
-
-  // ---------- BOTONES ----------
-
-  document.getElementById("mergeBtn").addEventListener("click", async () => {
-    const input = document.getElementById("baseFiles");
-    const status = document.getElementById("status");
-    if (!input.files.length) return alert("Selecciona al menos un PDF.");
-
-    status.textContent = "Procesando documentos...";
-    let count = 0;
-
-    for (const file of input.files) {
-      try {
-        const bytes = await file.arrayBuffer();
-        const pdf = await mergePDF(bytes);
-        await download(pdf, file.name.replace(/\.pdf$/i, "") + " - ENMARCADO.pdf");
-        count++;
-      } catch(err) {
-        console.error(err);
-        alert("Error al procesar " + file.name + ": " + err.message);
+    if(users[username] && users[username] === password) {
+      modal.style.display = 'none';
+      mainContent.style.display = 'block'; // Muestra todo el contenido
+      // Opcional: permitir agregar usuarios solo si es admin
+      if(username === "admin") {
+        addUserSection.style.display = 'block';
       }
+    } else {
+      errorMsg.innerText = "Usuario o contraseña incorrectos";
     }
+  }
 
-    status.textContent = `✔ ${count} PDF(s) procesados correctamente.`;
+  function addUser() {
+    const newUser = document.getElementById('newUser').value.trim();
+    const newPass = document.getElementById('newPass').value;
+
+    if(newUser && newPass) {
+      if(users[newUser]) {
+        successMsg.style.color = 'red';
+        successMsg.innerText = "Usuario ya existe";
+      } else {
+        users[newUser] = newPass;
+        successMsg.style.color = 'green';
+        successMsg.innerText = "Usuario agregado correctamente";
+        document.getElementById('newUser').value = '';
+        document.getElementById('newPass').value = '';
+      }
+    } else {
+      successMsg.style.color = 'red';
+      successMsg.innerText = "Complete ambos campos";
+    }
+  }
+
+  // Permite presionar Enter en la contraseña para hacer login
+  document.getElementById('password').addEventListener('keyup', function(e) {
+    if(e.key === 'Enter') checkLogin();
   });
 
-  document.getElementById("mergeWithReversoBtn").addEventListener("click", async () => {
-    const input = document.getElementById("baseFilesWithReverso");
-    const status = document.getElementById("status");
-    if (!input.files.length) return alert("Selecciona al menos un PDF.");
-
-    status.textContent = "Leyendo información del acta...";
-    let count = 0;
-
-    for (const file of input.files) {
-      try {
-        const text = await extractTextFirstPage(file);
-        const estado = detectEstado(text);
-        if (!estado) {
-          alert(`❌ Estado no detectado en: ${file.name}`);
-          continue;
-        }
-
-        const bytes = await file.arrayBuffer();
-        const pdf = await mergePDFWithReverso(bytes, estado);
-        await download(pdf, file.name.replace(/\.pdf$/i, "") + " - CON REVERSO.pdf");
-        count++;
-      } catch(err) {
-        console.error(err);
-        alert("Error en " + file.name + ": " + err.message);
-      }
-    }
-
-    status.textContent = `✔ ${count} PDF(s) con reverso procesados.`;
+  // Permite presionar Enter en el campo de agregar usuario
+  document.getElementById('newPass').addEventListener('keyup', function(e) {
+    if(e.key === 'Enter') addUser();
   });
-
-});
 </script>
 
 </body>
 </html>
 
+
   
+
 
 
 
