--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
 <body>
 
 <!-- Contenedor que ocultará todo tu HTML original hasta login -->
-<div id="mainContent">
-  <!-- AQUI PEGA TODO TU HTML REAL DE LA PÁGINA -->
-  <!DOCTYPE html>
+<div id="<!DOCTYPE html>
 <html lang="es">
 <head>
 <meta charset="utf-8" />
@@ -233,7 +231,9 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
-
+">
+  <!-- AQUI PEGA TODO TU HTML REAL DE LA PÁGINA -->
+  <!-- Por ejemplo: -->
   <header>
     <h1>Gestoría González</h1>
     <nav> <!-- tu menú --> </nav>
@@ -320,6 +320,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
 
 
